# rtic_bluepill_example

./: Cargo.toml  README.md  print-defmt.sh
.cargo/: config.toml
src/: main.rs
