[package]
name = "rtic_bluepill_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtic_bluepill_example"
harness = false

[dependencies]
defmt = "0.3"
# defmt-rtt = "0.4"
rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
rtic-monotonics ={ version = "1.0.0", features = ["cortex-m-systick"]}
defmt-serial = "0.8.0"
static_cell = "2.0.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

